--- a/app/src/main/res/layout/blind_home_request_fragment.xml
+++ b/app/src/main/res/layout/blind_home_request_fragment.xml
@@ -6,17 +6,19 @@
     android:padding="8dp">
 
     <ImageButton
+        android:id="@+id/record_button"
         android:layout_width="270dp"
         android:layout_height="270dp"
         android:background="@null"
         android:scaleType="centerInside"
         android:src="@drawable/btn_record"
-        android:layout_gravity="center_horizontal|center_vertical"/>
+        android:layout_gravity="center_horizontal|center_vertical"
+        android:contentDescription="@string/hold_to_record" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hold to record"
+        android:text="@string/hold_to_record"
         android:textSize="16sp"
         android:textColor="@android:color/white"
         android:layout_gravity="bottom|center_horizontal"/>
