--- a/app/src/main/res/layout/blind_all_book_fragment.xml
+++ b/app/src/main/res/layout/blind_all_book_fragment.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="@dimen/activity_universal_margin">
-
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_all_book"
@@ -19,5 +18,11 @@
         tools:orientation="vertical"
         tools:spanCount="2"/>
 
+    <ProgressBar
+        android:id="@+id/progressbar_allbook"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"/>
 
-</FrameLayout>
+
+</RelativeLayout>
