--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,5 +17,13 @@
     <color name="alertPositiveGreen">#09bb6e</color>
     <color name="alertNegativeRed">#ff3333</color>
 
+    <color name="book_color_1">#E57373</color>
+    <color name="book_color_2">#BA68C8</color>
+    <color name="book_color_3">#7986CB</color>
+    <color name="book_color_4">#4FC3F7</color>
+    <color name="book_color_5">#4DB6AC</color>
+    <color name="book_color_6">#AED581</color>
+    <color name="book_color_7">#FFF176</color>
+    <color name="book_color_8">#FFB74D</color>
     
 </resources>
