added allbook extend

--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:paddingLeft="@dimen/space"
     android:paddingRight="@dimen/space"
-    tools:context=".loginactivities.LoginActivity">
+    tools:context=".ui.loginactivities.LoginActivity">
 
     <ImageView
         android:id="@+id/img_logo"
