--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -8,7 +8,7 @@
     android:gravity="center"
     android:paddingLeft="@dimen/space"
     android:paddingRight="@dimen/space"
-    tools:context=".loginactivities.ResetPasswordActivity">
+    tools:context=".ui.loginactivities.ResetPasswordActivity">
 
     <ImageView
         android:id="@+id/img_logo"
