--- a/app/src/main/res/layout/blind_all_book_extend_2.xml
+++ b/app/src/main/res/layout/blind_all_book_extend_2.xml
@@ -2,13 +2,13 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg_tunanetra_allbooks_extend"
-    android:padding="8dp">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:background="@drawable/bg_tunanetra_allbooks_extend">
 
     <ImageButton
         android:layout_width="270dp"
         android:layout_height="270dp"
-        android:background="@null"
+        android:background="?attr/selectableItemBackgroundBorderless"
         android:scaleType="centerInside"
         android:src="@drawable/btn_audio"
         android:layout_centerVertical="true"
