--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -1,79 +1,94 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
-    android:orientation="vertical"
-    android:paddingLeft="@dimen/space"
-    android:paddingRight="@dimen/space"
-    tools:context=".ui.loginactivities.LoginActivity">
+    tools:context=".ui.authentication.login.LoginActivity">
 
-    <ImageView
-        android:id="@+id/img_logo"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:layout_gravity="center"
-        android:contentDescription="@string/desc_app_icon"
-        tools:src="@drawable/logo" />
-
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/inputText_nim"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/space">
-
-        <android.support.design.widget.TextInputEditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:drawableEnd="@drawable/ic_email_grey_24dp"
-            android:drawableRight="@drawable/ic_email_grey_24dp"
-            android:hint="@string/tv_email"
-            android:inputType="textEmailAddress" />
-
-    </android.support.design.widget.TextInputLayout>
-
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/inputText_password"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <android.support.design.widget.TextInputEditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:drawableEnd="@drawable/ic_lock_grey_24dp"
-            android:drawableRight="@drawable/ic_lock_grey_24dp"
-            android:hint="@string/tv_password"
-            android:inputType="textPassword" />
-
-    </android.support.design.widget.TextInputLayout>
-
-    <Button
-        android:id="@+id/btnLogin"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/space"
-        android:background="@drawable/login_button_bg"
-        android:contentDescription="@string/desc_login_button"
-        android:text="@string/tv_login"
-        android:textColor="@android:color/white" />
-
-    <Button
-        android:id="@+id/btn_forgotPassword"
+    <ProgressBar
+        android:id="@+id/progressbar_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/space"
-        android:background="@null"
-        android:text="@string/tv_forgot_password"
-        android:textAllCaps="false"
-        android:textColor="@color/colorAccent" />
+        android:layout_centerInParent="true"/>
 
-    <Button
-        android:id="@+id/btn_register"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@null"
-        android:text="@string/tv_not_a_member_register_now"
-        android:textAllCaps="false" />
+    <LinearLayout
+        android:paddingLeft="@dimen/space"
+        android:paddingRight="@dimen/space"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="center">
 
-</LinearLayout>
+        <ImageView
+            android:id="@+id/img_logo"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_gravity="center"
+            android:contentDescription="@string/desc_app_icon"
+            tools:src="@drawable/logo" />
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/inputEmail_login"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/space">
+
+            <android.support.design.widget.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:drawableEnd="@drawable/ic_email_grey_24dp"
+                android:drawableRight="@drawable/ic_email_grey_24dp"
+                android:hint="@string/tv_email"
+                android:inputType="textEmailAddress" />
+
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/inputPass_login"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <android.support.design.widget.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:drawableEnd="@drawable/ic_lock_grey_24dp"
+                android:drawableRight="@drawable/ic_lock_grey_24dp"
+                android:hint="@string/tv_password"
+                android:inputType="textPassword" />
+
+        </android.support.design.widget.TextInputLayout>
+
+        <Button
+            android:id="@+id/btn_login"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/space"
+            android:background="@drawable/login_button_bg"
+            android:contentDescription="@string/desc_login_button"
+            android:text="@string/tv_login"
+            android:textColor="@android:color/white" />
+
+        <Button
+            android:id="@+id/btn_forgotPassword_login"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/space"
+            android:background="@null"
+            android:text="@string/tv_forgot_password"
+            android:textAllCaps="false"
+            android:textColor="@color/colorAccent" />
+
+        <Button
+            android:id="@+id/btn_register_login"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@null"
+            android:text="@string/tv_not_a_member_register_now"
+            android:textAllCaps="false"
+            android:textColor="@color/colorAccent"/>
+
+    </LinearLayout>
+
+
+
+</RelativeLayout>
