--- a/app/src/main/res/layout/dialog_logout.xml
+++ b/app/src/main/res/layout/dialog_logout.xml
@@ -1,11 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorTransparent"
-    android:gravity="center">
+    android:background="@null">
+
+    <RelativeLayout
+        android:id="@+id/dim_background_logout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/colorDim">
+
+    </RelativeLayout>
 
     <LinearLayout
+        android:layout_gravity="center"
         android:elevation="8dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -16,8 +24,8 @@
         android:paddingBottom="20dp">
 
         <ImageView
-            android:layout_width="120dp"
-            android:layout_height="120dp"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             android:layout_gravity="center"
             android:scaleType="fitCenter"
             android:src="@drawable/icon_warning" />
@@ -29,7 +37,7 @@
             android:layout_marginTop="20dp"
             android:text="Alert"
             android:textColor="@color/warningColor"
-            android:textSize="34sp"
+            android:textSize="30sp"
             android:textStyle="bold" />
 
         <TextView
@@ -42,7 +50,7 @@
             android:text="Are you sure to logout from this app?"
             android:textAlignment="center"
             android:textColor="#888686"
-            android:textSize="18sp" />
+            android:textSize="16sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -53,10 +61,10 @@
             android:weightSum="2">
 
             <Button
-                android:textSize="18sp"
+                android:textSize="16sp"
                 android:id="@+id/btn_logout_dialog_yes"
                 android:layout_width="0dp"
-                android:layout_height="50dp"
+                android:layout_height="40dp"
                 android:layout_marginLeft="40dp"
                 android:layout_marginRight="10dp"
                 android:layout_weight="1"
@@ -66,10 +74,10 @@
                 android:textColor="@color/alertPositiveGreen" />
 
             <Button
-                android:textSize="18sp"
+                android:textSize="16sp"
                 android:id="@+id/btn_logout_dialog_no"
                 android:layout_width="0dp"
-                android:layout_height="50dp"
+                android:layout_height="40dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="40dp"
                 android:layout_weight="1"
@@ -84,4 +92,4 @@
     </LinearLayout>
 
 
-</RelativeLayout>
+</FrameLayout>
