--- a/app/src/main/res/layout/my_book_item.xml
+++ b/app/src/main/res/layout/my_book_item.xml
@@ -3,14 +3,28 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
-    android:gravity="center_horizontal"
     android:padding="@dimen/activity_universal_margin">
 
     <ImageView
-        android:id="@+id/img_my_book"
         android:layout_width="148dp"
         android:layout_height="148dp"
-        tools:src="@drawable/btn_books"
-        android:padding="24dp"/>
+        tools:src="@drawable/ic_books_color_1"
+        android:padding="32dp"
+        android:id="@+id/img_my_book"
+        android:layout_centerHorizontal="true"
+        android:background="@drawable/img_all_book_item_bg"
+        android:layout_marginBottom="8dp"/>
+
+    <TextView
+        android:id="@+id/tv_mybook_username"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/img_my_book"
+        tools:text="Bahasa"
+        android:gravity="center_horizontal"
+        android:layout_centerHorizontal="true"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:textColor="@color/primary"/>
 
 </RelativeLayout>
